// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalKeyStore addUserAccount - nep2 without password 1`] = `[Error: Expected private key or password and NEP-2 key]`;

exports[`LocalKeyStore addUserAccount - no private key 1`] = `[Error: Expected private key or password and NEP-2 key]`;

exports[`LocalKeyStore deleteUserAccount - all and add back 1`] = `
Array [
  Array [
    Object {
      "nep2": "6PYWVp3xfgvnuNKP7ZavSViYvvim2zuzx9Q33vuWZr8aURiKeJ6Zm7BfPQ",
      "type": "locked",
      "userAccount": Object {
        "id": Object {
          "address": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
          "network": "main",
        },
        "name": "Mock",
        "publicKey": "031d8e1630ce640966967bc6d95223d21f44304133003140c3b52004dc981349c9",
      },
    },
    undefined,
  ],
  Array [
    Object {
      "nep2": "6PYLHmDf6AjF4AsVtosmxHuPYeuyJL3SLuw7J1U8i7HxKAnYNsp61HYRfF",
      "privateKey": "7d128a6d096f0c14c3a25a2b0c41cf79661bfcb4a8cc95aaaea28bde4d732344",
      "type": "unlocked",
      "userAccount": Object {
        "id": Object {
          "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
          "network": "main",
        },
        "name": "Mock",
        "publicKey": "02028a99826edc0c97d18e22b6932373d908d323aa7f92656a77ec26e8861699ef",
      },
    },
    undefined,
  ],
]
`;

exports[`LocalKeyStore getWallet - unknown address 1`] = `"Unknown account AVf4UGKevVrMR1j3UkPsuoYKSC4ocoAkKx"`;

exports[`LocalKeyStore getWallet - unknown network 1`] = `"Unknown account ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW"`;

exports[`LocalKeyStore sign - locked 1`] = `[Error [LOCKED_ACCOUNT]: Account ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s is locked]`;

exports[`LocalKeyStore sign 1`] = `"5bdd1473894ed6a01ed3f1f47835918050242427f78413f856c8c92acbdf88027f254a883de629586a829e63260a3bd65207e620c2cce563282183d5eb6930ea"`;

exports[`LocalKeyStore updateUserAccountName - locked 1`] = `
Array [
  Array [
    Object {
      "nep2": "6PYWVp3xfgvnuNKP7ZavSViYvvim2zuzx9Q33vuWZr8aURiKeJ6Zm7BfPQ",
      "type": "locked",
      "userAccount": Object {
        "id": Object {
          "address": "ALfnhLg7rUyL6Jr98bzzoxz5J7m64fbR4s",
          "network": "main",
        },
        "name": "new name",
        "publicKey": "031d8e1630ce640966967bc6d95223d21f44304133003140c3b52004dc981349c9",
      },
    },
    undefined,
  ],
]
`;

exports[`LocalKeyStore updateUserAccountName - unlocked 1`] = `
Array [
  Array [
    Object {
      "nep2": "6PYLHmDf6AjF4AsVtosmxHuPYeuyJL3SLuw7J1U8i7HxKAnYNsp61HYRfF",
      "privateKey": "7d128a6d096f0c14c3a25a2b0c41cf79661bfcb4a8cc95aaaea28bde4d732344",
      "type": "unlocked",
      "userAccount": Object {
        "id": Object {
          "address": "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
          "network": "main",
        },
        "name": "new name",
        "publicKey": "02028a99826edc0c97d18e22b6932373d908d323aa7f92656a77ec26e8861699ef",
      },
    },
    undefined,
  ],
]
`;
